@@ -1,3 +1,8 @@
+2019-04-26  Patrik Thunström
+
+	* Add ifdefs to support osgEarth version 2.10.0 and above
+	where the annotations API has been refactored.
+
 2018-06-25  ------ omnetpp-5.4.1 released ------
 
 2018-06-11  ------ omnetpp-5.4 released ------
